# lottery_runner

./: README.md  setup.cfg
src/lottery_runner/: __init__.py  __main__.py  app.py  cli.py
src/lottery_runner/models/: lottery.py  participant.py  ticket.py
tests/: lottery_test.py
