[metadata]
name = lottery_runner
description = Lottery Running System
author = Bill Bosshard
author-email = bill.bosshard@outlook.com
license = mit
long-description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
console_scripts =
    lottery_runner = lottery_runner.cli:main

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 1.0
package = lottery_runner
